--- a/Merkury/index.html
+++ b/Merkury/index.html
@@ -41,7 +41,7 @@
 									<li><a href="#s_4" rel="m_PageScroll2id">Contact</a></li>
 								</ul>
 							</div>
-							<button class="hamburger hamburger--slider d-md-none" type="button">
+							<button class="hamburger hamburger--slider" type="button">
 								<span class="hamburger-box">
 									<span class="hamburger-inner"></span>
 								</span>
