--- a/Shipyard/index.html
+++ b/Shipyard/index.html
@@ -22,7 +22,10 @@
 	<link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
-
+<div class="loader">
+	<div class="loader_inner">
+	</div>
+</div>
 	<header id="header">
 		<div class="overlay"></div>
 		<div class="logo_top">
@@ -139,7 +142,7 @@
 									<div class="col-md-8 col-12">
 										<div class="cats">
 											<div class="cat_name">Дизайн</div>
-											<div class="cat_cost">От 1100 RUB</div> 
+											<div class="cat_cost">От 1000 RUB</div> 
 											<div class="cat_more">Подробнее</div>
 										</div>
 									</div>
@@ -157,7 +160,7 @@
 									<div class="col-md-8 col-12">
 										<div class="cats">
 											<div class="cat_name">Верстка</div>
-											<div class="cat_cost">От 800 RUB</div> 
+											<div class="cat_cost">От 1000 RUB</div> 
 											<div class="cat_more">Подробнее</div>
 										</div>
 									</div>
@@ -175,7 +178,7 @@
 									<div class="col-md-8 col-12">
 										<div class="cats">
 											<div class="cat_name">Сайты "под ключ"</div>
-											<div class="cat_cost">От 1900 RUB</div> 
+											<div class="cat_cost">От 1000 RUB</div> 
 											<div class="cat_more">Подробнее</div>
 										</div>
 									</div>
