--- a/electro/index.html
+++ b/electro/index.html
@@ -19,6 +19,7 @@
 	<!-- Template Basic Images End -->
 	
 	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
 </head>
 
