--- a/electro/index.html
+++ b/electro/index.html
@@ -77,54 +77,70 @@
 	<section class="s_sliders">
 		<div class="slider_top">
 			<div class="item">
-				<img src="img/index/slider_top_item.jpg" alt="photo">
-				<div class="descr">
-					<span>Предохранительные системы</span> <br> VARIUS (OES, ЧЕХИЯ)
-				</div>
+				<a href="#">
+					<img src="img/index/slider_top_item.jpg" alt="photo">
+					<div class="descr">
+						<span>Предохранительные системы</span> <br> VARIUS (OES, ЧЕХИЯ)
+					</div>
+				</a>
 			</div>
 			<div class="item">
-				<img src="img/index/slider_top_item.jpg" alt="photo">
-				<div class="descr">
-					<span>Предохранительные системы</span> <br> VARIUS (OES, ЧЕХИЯ)
-				</div>
+				<a href="#">
+					<img src="img/index/slider_top_item.jpg" alt="photo">
+					<div class="descr">
+						<span>Предохранительные системы</span> <br> VARIUS (OES, ЧЕХИЯ)
+					</div>
+				</a>
 			</div>
 			<div class="item">
-				<img src="img/index/slider_top_item.jpg" alt="photo">
-				<div class="descr">
-					<span>Предохранительные системы</span> <br> VARIUS (OES, ЧЕХИЯ)
-				</div>
+				<a href="#">
+					<img src="img/index/slider_top_item.jpg" alt="photo">
+					<div class="descr">
+						<span>Предохранительные системы</span> <br> VARIUS (OES, ЧЕХИЯ)
+					</div>
+				</a>
 			</div>
 		</div>
 		<ul class="slider_bottom">
 			<li class="item">
-				<img src="img/index/slider_bottom_item1.jpg" alt="item1">
-				<div class="descr">
-					Стабилизаторы
-				</div>
+				<a href="#">
+					<img src="img/index/slider_bottom_item1.jpg" alt="item1">
+					<div class="descr">
+						Стабилизаторы
+					</div>
+				</a>
 			</li>
 			<li class="item">
-				<img src="img/index/slider_bottom_item4.jpg" alt="item1">
-				<div class="descr">
-					Оборудование для медицины
-				</div>
+				<a href="#">
+					<img src="img/index/slider_bottom_item4.jpg" alt="item1">
+					<div class="descr">
+						Оборудование для медицины
+					</div>
+				</a>
 			</li>
 			<li class="item">
-				<img src="img/index/slider_bottom_item3.jpg" alt="item1">
-				<div class="descr">
-					Реле и автоматика
-				</div>
+				<a href="">
+					<img src="img/index/slider_bottom_item3.jpg" alt="item1">
+					<div class="descr">
+						Реле и автоматика
+					</div>
+				</a>
 			</li>
 			<li class="item">
-				<img src="img/index/slider_bottom_item4.jpg" alt="item1">
-				<div class="descr">
-					Оборудование для медицины
-				</div>
+				<a href="#">
+					<img src="img/index/slider_bottom_item4.jpg" alt="item1">
+					<div class="descr">
+						Оборудование для медицины
+					</div>
+				</a>
 			</li>
 			<li class="item">
-				<img src="img/index/slider_bottom_item4.jpg" alt="item1">
-				<div class="descr">
-					Оборудование для медицины
-				</div>
+				<a href="#">
+					<img src="img/index/slider_bottom_item4.jpg" alt="item1">
+					<div class="descr">
+						Оборудование для медицины
+					</div>
+				</a>
 			</li>
 		</ul>
 	</section>
