--- a/electro/pages/page.html
+++ b/electro/pages/page.html
@@ -77,11 +77,10 @@
 
 	<nav class="aside">
 		<ul>
-			<li class="active"><a href="#">О компании</a></li>
 			<li><a href="#">Модульные приборы MINIA</a></li>
 			<li><a href="#">Компактные автоматические выключатели MODEON</a></li>
 			<li><a href="#">Воздушные автоматические выключатели ARION</a></li>
-			<li><a href="#">Предохранительные системы Varius</a></li>
+			<li><a href="#">Предохранительные системы VARIUS</a></li>
 			<li><a href="#">Коммутационные и управляющие приборы CONTEO</a></li>
 			<li><a href="#">Конфигуратор OEZ</a></li>
 			<li><a href="#">Расчетная программа Sichr</a></li>
